--- a/THANKS
+++ b/THANKS
@@ -6,6 +6,7 @@ Bruno Haible <haible@ilog.fr>
 Charles S. Kerr <cskerr@delenn.jccbi.gov>
 Joel Cannon <cannon@alpha.centenary.edu>
 Karl Berry <kb@cs.umb.edu>
+Mark Kettenis <kettenis@phys.uva.nl>
 Mimi Burbank <mimi@scri.fsu.edu>
 Oliver Guntermann <og@informatik.uni-hannover.de>
 Thomas Esser <te@informatik.uni-hannover.de>
