--- a/TODO
+++ b/TODO
@@ -1,16 +1,20 @@
-* Implement new idea for Automake support: LTLIBRARIES.
+* Need to change `-rpath FOO -rpath BAR' to `-rpath FOO:BAR' with at
+least OSF/1 ld.
 
 For 1.1:
+
+* Complete the -export-dynamic flag, and the new dlname mode.
+
+* Complete convenience libraries made of libtool objects.  Document
+-whole-archive and -no-whole-archive.  We also need a way to use these
+convenience libraries just to resolve symbols, rather than the
+(simplistic) whole-archive and no-whole-archive.
 
 * Write libtool not to be dependent on the compiler used to configure
 it.
 
 * Implement full multi-language support.  There are beginnings of this
 in the manual (Other Languages).
-
-* Consider allowing the creation of convenience libraries made of
-libtool objects.  From David Mosberger-Tang.  Think about how this
-would be done with Automake.
 
 Sometime in the future (maybe):
 
