--- a/tests/ChangeLog
+++ b/tests/ChangeLog
@@ -1,3 +1,22 @@
+Mon Feb  3 15:17:18 1997  Gordon Matzigkeit  <gord@gnu.ai.mit.edu>
+
+	* Makefile.am (TESTS): Do the full make sequence with
+	--disable-shared, then without.
+
+	* demo-sttc.test: Configure the demo directory with
+	--disable-shared.
+
+Wed Jan 29 14:02:03 1997  Gordon Matzigkeit  <gord@gnu.ai.mit.edu>
+
+	* hardcode.test: Rewrite to use fgrep on output from ``strings
+ 	-a'' if using fgrep directly on the binary files fails.  From Mark
+ 	Kettenis.
+
+Tue Jan 28 14:00:23 1997  Gordon Matzigkeit  <gord@gnu.ai.mit.edu>
+
+	* hardcode.test: Make sure that ../demo/libhello.la really is a
+	shared library before running hardcoding tests.
+
 Sat Jan 18 10:33:21 1997  Gordon Matzigkeit  <gord@gnu.ai.mit.edu>
 
 	* demo-conf.test: Use the CONFIG_SHELL environment variable when
